# serializer version: 1
# name: test_connecting_to_remote_server
  list([
    'bat normalized_repo_path/file4.js --file-name file4.js --paging never --line-range 1:1',
    'bat normalized_repo_path/file4.md --file-name file4.md --paging never --line-range 1:1',
  ])
# ---
# name: test_integration_test_no_results
  ''
# ---
# name: test_integration_test_without_color
  '''
  file4.js:1:// This is a second updated example JavaScript file
  file4.md:1:// This is a second updated example JavaScript file
  
  '''
# ---
# name: test_server_is_not_running_error[/another/path/to/repo2]
  '''
  The SeaGOAT server is not running. Please start the server using the following command:
  
  seagoat-server start /another/path/to/repo2
  
  
  '''
# ---
# name: test_server_is_not_running_error[/path/to/repo1]
  '''
  The SeaGOAT server is not running. Please start the server using the following command:
  
  seagoat-server start /path/to/repo1
  
  
  '''
# ---
